Profile ya muestra los campos

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,2 +1,21 @@
-<h1>profile</h1>
-<p><a href="/">Logout</a></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <!-- <% include partials/head%> -->
+</head>
+<body>
+<div>
+    <h1>profile</h1>
+    <p><a href="/logout">Logout</a></p>
+    <p>
+        <strong>id</strong>: <%= user._id %> <br>
+        <strong>email</strong>: <%= user.local.email %><br>
+        <strong>password</strong>: <%= user.local.password %>
+    </p>
+</div>
+</body>
+</html>
