--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -37,7 +37,7 @@
 
            <div>
                 <!-- envia a la pagina de creación usuario admin -->
-               <!-- <p> Need a account?<a href="/signup">Signup</a></p> -->
+               <p> Need a account?<a href="/signup">Signup</a></p>
                <p> Or go <a href="/">Home</a></p>
            </div>
        </div>
