--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -20,13 +20,17 @@
                    <label for="password">Password</label>
                    <input type="password" name="password">
                </div>
+                <div>
+                   <label for="name">name</label>
+                   <input type="name" name="name">
+               </div>
                <input type="submit">
            </form>
             <!--  Errores  -->
            <div>
                <% if(message.length > 0) { %>
                 <div>
-                    <%= messsge %>
+                    <%= message %>
                 </div>
                <% }  %>
 
