crea nuevos campos en la BD

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -15,6 +15,7 @@
         <strong>id</strong>: <%= user._id %> <br>
         <strong>email</strong>: <%= user.local.email %><br>
         <strong>password</strong>: <%= user.local.password %>
+        <strong>LastName</strong>: <%= user.local.lastName %>
     </p>
 </div>
 </body>
