--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -21,8 +21,8 @@
                    <input type="password" name="password">
                </div>
                 <div>
-                   <label for="name">name</label>
-                   <input type="name" name="name">
+                   <label for="lastName">lastName</label>
+                   <input type="lastName" name="lastName">
                </div>
                <input type="submit">
            </form>
