Pagina /listUser imprementada

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -10,6 +10,10 @@
 <body>
 <div>
 
+    <h1>listar usuarios</h1>
+    <p><a href="/listUser">Listar Usuarios</a></p>
+    <p>
+
     <h1>Clinical history</h1>
     <p><a href="/clinicalHist">Clinical history</a></p>
     <p>
