Borra, lista, consulta

--- a/src/views/clinicalHist.ejs
+++ b/src/views/clinicalHist.ejs
@@ -24,6 +24,7 @@
         <strong>address</strong>: <%= user.local.address %><br>
         <strong>sex</strong>: <%= user.local.sex %><br>
         <strong>consulMotivation</strong>: <%= user.local.consulMotivation %> <br>
+        <!-- <strong>status</strong>: <%= user.local.status %> <br> -->
     </p>
 </div>
 </body>
