--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -24,6 +24,9 @@
                    <label for="lastName">lastName</label>
                    <input type="lastName" name="lastName">
                </div>
+               <div>
+                    <label for="userAdmin">userAdmin</label><input type="checkbox" name="userAdmin" value="true" required>
+                </div>
                <input type="submit">
            </form>
             <!--  Errores  -->
