--- a/src/views/listUser.ejs
+++ b/src/views/listUser.ejs
@@ -8,7 +8,7 @@
     <% include partials/head.ejs %>
 </head>
 <body>
-       <a href="/listUser"> Actualizar los registros</a></br></br>
+       <a href="/listUser/"> Actualizar los registros</a></br></br>
     <% for (var i=0; i< myvariable.length; i++) { %>
         <strong>
             nombre:
