--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -42,6 +42,11 @@
                 <a href="/newClinicalHist">Crear nueva Historia Clinica</a>
             </p>
        </div>
+       <div>
+            <p>
+                <a href="/listPatiente">Listar Pacientes</a>
+            </p>
+        </div>
 </div>
 
 
@@ -103,10 +108,11 @@
         <strong>LastName</strong>: <%= user.local.userAdmin %>
     </p>
     <div>
-            <p>
-                <a href="/clinicalHist">Historia Clinica</a>
-            </p>
-       </div>
+        <p>
+            <a href="/clinicalHist">Historia Clinica</a>
+        </p>
+    </div>
+
 </div>
  
 
