Se agrega usuario Dios, formulario de contacto

--- a/src/views/newClinicalHist.ejs
+++ b/src/views/newClinicalHist.ejs
@@ -13,13 +13,16 @@
                    </h1>
                    <form action="/signup" method="post">
                         <div>
-                            <label for="userAdmin">userAdmin</label><input type="checkbox" name="userAdmin" value="true">
+                            <label for="userAdmin">Administrador</label><input type="checkbox" name="userAdmin" value="true">
                         </div>
                         <div>
-                            <label for="userDoctor">userDoctor</label><input type="checkbox" name="userDoctor" value="true">
+                            <label for="userDoctor">Usario Doctor</label><input type="checkbox" name="userDoctor" value="true">
                         </div>
                         <div>
-                            <label for="userPatiente">userPatiente</label><input type="checkbox" name="userPatiente" value="true">
+                            <label for="userPatiente">Paciente Humano</label><input type="checkbox" name="userPatiente" value="true">
+                        </div>
+                        <div>
+                            <label for="god">Paciente Dios</label><input type="checkbox" name="god" value="true">
                         </div>
                        <div>
                            <label for="name">Nombre</label>
