--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -150,6 +150,15 @@
 <%}%>
 
 <!--Paciente Dios-->     
+           <!--  Errores  -->
+           <div>
+                <% if(message.length > 0) { %>
+                 <div>
+                     <%= message %>
+                 </div>
+                <% }  %>
+ 
+            </div>
 
 </body>
 </html>
